# Sky19.2

./: data.json  pyproject.toml  requirements
catalogapp/: admin.py  forms.py  models.py  urls.py  views.py
catalogapp/management/commands/: fill.py
catalogapp/migrations/: 0001_initial.py  0002_product_is_available.py  0003_category.py  0004_delete_category.py  0005_product_is_published_product_slug_and_more.py  0006_version.py  0007_version_is_active.py
catalogapp/templates/catalogapp/: base.html  contacts.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html  version_form.html
catalogapp/templates/catalogapp/includes/: inc_main_menu.html
category/: models.py  urls.py  views.py
category/migrations/: 0001_initial.py
category/templates/category/: category_confirm_delete.html  category_detail.html  category_form.html  category_list.html
config/: settings.py  urls.py
users/: forms.py  models.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  register.html  user_form.html
