[tool.poetry]
name = "sky19-2"
version = "0.1.0"
description = ""
authors = ["SamSammich <125561867+SamSammich@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "sky19"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
pytils = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
